<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parent_layout"
    android:background="@drawable/gradient_background_v2"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar">

            <android.support.v7.widget.CardView
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                app:cardElevation="4dp"
                style="@style/CardViewStyle">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:paddingTop="32dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_gravity="center"
                            android:src="@drawable/icon_header"
                            android:layout_width="wrap_content"
                            android:layout_height="192dp"
                            android:layout_marginBottom="24dp"
                            android:contentDescription="@string/icon_image_header"/>

                        <TextView
                            android:text="@string/disclaimer_to_asses_our_app"
                            style="@style/AboutTextView"/>

                        <TextView
                            android:text="@string/all_data_provided_by"
                            android:autoLink="web"
                            style="@style/AboutTextView"/>

                        <TextView
                            android:text="@string/trademarks_policy"
                            style="@style/AboutTextView"/>

                        <TextView
                            android:text="@string/app_privacy_policy"
                            android:autoLink="web"
                            style="@style/AboutTextView"/>

                        <TextView
                            android:text="@string/more_apps"
                            android:autoLink="web"
                            style="@style/AboutTextView"/>

                        <TextView
                            android:text="@string/developed_by_chyzh"
                            android:textStyle="italic"
                            android:textAlignment="center"
                            style="@style/AboutTextView"/>

                    </LinearLayout>

                </ScrollView>

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:background="@color/toolbar_grey"
            app:title="@string/about"
            style="@style/CustomToolbar"/>

</RelativeLayout>