<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:background="@color/background_color"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="@color/dark_green"
        app:title="@string/meal_recipe"
        style="@style/CustomToolbar"/>

    <include
        layout="@layout/app_progress_bar"/>

    <LinearLayout
        android:id="@+id/like_button_container"
        android:layout_below="@id/toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:layout_alignParentEnd="true">

        <ImageButton
            android:id="@+id/like_imageButton"
            android:background="@drawable/like_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:contentDescription="@string/like_button"/>

    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/toolbar"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp">

            <TextView
                android:layout_marginTop="8dp"
                android:id="@+id/meal_name_textView"
                android:gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:textColor="@color/text_color"
                android:textStyle="bold"
                android:textSize="24sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/meal_imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/meal_image"/>

        </FrameLayout>

        <FrameLayout
            android:layout_marginTop="8dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:id="@+id/recipe_cardView"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:visibility="invisible"
                app:cardElevation="4dp"
                style="@style/CardViewStyle">

                    <TextView
                        android:padding="8dp"
                        android:id="@+id/recipe_textView"
                        android:textAlignment="textStart"
                        android:singleLine="false"
                        android:maxLines="8"
                        android:scrollbars="vertical"
                        android:textColor="@color/text_color"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>



            </android.support.v7.widget.CardView>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.2">

        <android.support.v7.widget.CardView
            android:id="@+id/ingredients_list_cardView"
            android:visibility="invisible"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:cardElevation="4dp"
            style="@style/CardViewStyle">

            <LinearLayout
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/meal_ingredients_recyclerGridView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:overScrollMode="ifContentScrolls"
                    android:scrollbars="vertical"
                    android:clipToPadding="false"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        </FrameLayout>

    </LinearLayout>

</RelativeLayout>